#61 Added a button on mobile view to generate random prompts. @monjo003 the search filled need to get fixed, because it's kinda hard to click exactly at the filled, otherwise it opens the first journal

--- a/client/src/app/journals/journals.component.scss
+++ b/client/src/app/journals/journals.component.scss
@@ -39,16 +39,13 @@
     position: fixed;
     bottom: 25px;
     right: 25px;
+background-color: red;
 }
+ 
 
-.prompts-popup-mobile{
-    position: fixed;
-    bottom: 25px;
-    right: 25px;
-
-}
 
 .journals-mobile-search {
+    left: 20px;
     width: 100%;
     margin-bottom: -20px;
 }
@@ -60,3 +57,15 @@
     color: black;
 }
 
+.journals-mobile-search{
+    margin-bottom: -20px;
+    width: 75%;
+    float: left;
+
+}
+
+.random-prompts-mob{
+    margin-bottom: -20px;
+    width: 25%;
+    float: right;
+}
